# eaifoundation

./: README.md  eaifoundation_constants.py  requirements.txt  setup.cfg
boolset/: constants.py  losses.py  models.py  sensors.py  tasks_and_samplers.py
boolset/experiments/: base.py  cliprn50_trnn_ddppo.py  cliprn50_trnn_ddppo_cpca16.py
exp/build_visible_graph/: main.py  main.sh
exp/debug_procthor/: tmp.ipynb
exp/find_interesting_scene_questions/: main.py  main_ray.py  sort_relationships_by_frequency.py
exp/finetune_image_segmentation/: collect_data.ipynb  collect_procthor_tree_data.py  data_collection_utils.py
exp/generate_probing_dataset/: dataset.py
frozen_lm_qa/: build_dataset.py  checkpoints.py  conditional_generation_flax_utils.py  conditional_generation_utils.py  convert_t5x_frozen_memory_qa_checkpoint.py  feature_converter.py  finetune.gin  finetune_frozen_t5.gin  flax_model.py  frozen_memory_config.gin  infer.gin  model.py  network.py  optimizers.py  pytorch_model.py  read_dataset.py  seqio_task.py
qa_task/: arm_utils.py  distributions.py  embodied_qa_model.py  procthor_task.py  procthor_task_sampler.py  qa_losses.py  qa_task.py  qa_task_sampler.py
question_answering/: clevr_generation.py  clevr_generation_balance.py  forbid_key_value.json  metadata.json  question_engine.py  question_generation.py  synonyms.json
relationship_graph/: attrs_relations.py  category.py  constants.py  graph_to_scene.py  graph_to_scene_architecthor.py  graphs.py  misc.py
scripts/: auto_format.sh
tests/: test_question_solvers.py
(+11 files in other folders)
