[metadata]
name = eaifoundation

[options]
python_requires = >=3.7, <4
packages =
    relationship_graph
    question_answering
    frozen_lm_qa
    boolset
    qa_task

[mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
